fix: (CXSPA-7992) Store 'In Stock' icon contrast
* fixed an opacity of 'In Stock' icon

closes: https://jira.tools.sap/browse/CXSPA-7992

--- a/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
+++ b/feature-libs/pickup-in-store/styles/_my-preferred-store.scss
@@ -10,7 +10,7 @@
     .cx-store-opening-hours-icon {
       color: var(--cx-color-secondary);
       opacity: var(--cx-opacity, 0.5);
-      @include forFeature('a11yStoreImproveIconsContrast') {
+      @include forFeature('a11yViewHoursButtonIconContrast') {
         opacity: var(--cx-opacity, 1);
       }
     }
