--- a/feature-libs/pickup-in-store/styles/_store.scss
+++ b/feature-libs/pickup-in-store/styles/_store.scss
@@ -33,7 +33,7 @@
     .cx-store-opening-hours-icon {
       color: var(--cx-color-secondary);
       opacity: var(--cx-opacity, 0.5);
-      @include forFeature('a11yStoreImproveIconsContrast') {
+      @include forFeature('a11yViewHoursButtonIconContrast') {
         opacity: var(--cx-opacity, 1);
       }
     }
@@ -55,7 +55,7 @@
   .cx-store-stock-icon {
     color: var(--cx-color-secondary);
     opacity: var(--cx-opacity, 0.5);
-    @include forFeature('a11yStoreImproveIconsContrast') {
+    @include forFeature('a11yStoreInStockIconContrast') {
       opacity: var(--cx-opacity, 1);
     }
   }
